@@ -1,5 +1,10 @@
 2012-06-28  Corinna Vinschen  <vinschen@redhat.com>
 
+	* wincrypt.h (WINBASEAPI): Define as non-import iff
+	_KERNEL32_ was defined.
+
+2012-06-28  Corinna Vinschen  <vinschen@redhat.com>
+
 	* psdk_inc/_ip_types.h (sockaddr_in): Define unconditionally.
 
 2012-06-28  Corinna Vinschen  <vinschen@redhat.com>
